# colmena-bench

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  LIMITATIONS.md  METHODOLOGY.md  README.md  ROADMAP.md
data/: bench_fixtures.json
data/orders_synthetic/: README.md  compute_ground_truth.py  generator.py  ground_truth.json  questions_20.json  schema.json
docs/: SELLING_COLMENA.md  TECHNICAL.md  base_url_compatibility.md
docs/articles/: colmena-dollar-case.html  colmena-economics-deck.html  colmena-exec-brief.md  colmena-whitepaper.md
docs/demos/: demo05-context-tax.md  demo05-replication.md  demo06-executive-summary.md  demo06-refund-agent.md  demo06-replication.md  demo07-many-tools.md  demo07-replication.md  task04-csv.md  (+7 more)
harness/: pricing_table.json  pyproject.toml  runner_contract.md
harness/loadtest/: aggregate.py  calibrate.py  driver.py  phase1_verdict.py  run_phase1.sh  run_phase1_drive.py  sampler.py  stub_llm.py
harness/loadtest/graphs/: loadtest_minimal.json
harness/loadtest/tests/: test_aggregate.py  test_driver.py  test_sampler.py  test_stub_llm.py
harness/multilang/: README.md  run_multilang.py
harness/multilang/graphs/: power.json
harness/orchestrator/: __init__.py  aggregate.py  demo05_aggregate_n.py  demo05_buckets.py  demo05_judge.py  demo05_loc.py  demo05_plots.py  demo05_run.py  demo06_matrix.py  demo06_plots.py  demo07_plots.py  demo07_session_plots.py  demo08_matrix.py  demo08_plots.py  demo09_plots.py  demo10_matrix.py  demo10_plots.py  demo_codeexec_run.py  demo_refund_run.py  demo_secrets_run.py  demo_skills_run.py  demo_tools_run.py  demo_tools_session_run.py  full_run.py  mock_account_api.py  report.py  run.py  task4_aggregate.py
harness/orchestrator/tests/: test_demo05_buckets.py  test_demo05_loc.py  test_demo06_matrix.py  test_demo_refund_run.py  test_demo_tools_run.py  test_demo_tools_session_run.py
harness/schemas/: aggregated.schema.json  proxy_span.schema.json  run_output.schema.json  task.schema.json
harness/scoring/: task04_scorer.py
harness/scoring/tests/: test_task04_scorer.py
harness/tasks/: 01_hello_world.yaml  04_csv_expert.yaml  04_csv_naive.yaml  05_context_scrubbing.yaml  06_refund.yaml  07_tools.yaml  07b_tools_session.yaml  08_codeexec.yaml  09_skills.yaml  10_secrets.yaml
harness/tests/: test_orchestrator.py  test_pricing.py  test_schemas.py
paper/: .gitignore  main.tex  refs.bib
proxy/: README.md  litellm_config.yaml  spans_callback.py  start_proxy.sh
runners/_bench_common/: pyproject.toml
runners/_bench_common/bench_common/: __init__.py  answers.py  core.py  datasets.py  rag_index.py  scenario05.py  scenario_codeexec.py  scenario_refund.py  scenario_secrets.py  scenario_skills.py  scenario_tools.py
runners/_bench_common/tests/: test_answers.py  test_core_extras.py  test_datasets.py  test_emit_output.py  test_mock_account_api.py  test_rag_index.py  test_resume_args.py  test_scenario05.py  test_scenario_codeexec.py  test_scenario_refund.py  test_scenario_secrets.py  test_scenario_skills.py  test_scenario_tools.py  test_variant_params.py
runners/colmena/: Cargo.toml  README.md
runners/colmena/dags/: demo05_turn.json  smoke_hello.json
runners/colmena/runner/: __init__.py  __main__.py  llm.py
runners/colmena/runner/dags/: codeexec_agent.json  refund_agent.json  secrets_agent.json  skills_agent.json
runners/colmena/runner/tasks/: task01.py  task04_expert.py  task04_naive.py  task05.py  task06_refund.py  task07_tools.py  task07b_tools.py  task08_codeexec.py  task09_skills.py  task10_secrets.py
runners/colmena/src/: engine.rs  main.rs  output.rs
runners/colmena/tasks/: 01_hello_world.json
runners/crewai/: pyproject.toml
runners/crewai/runner/: __init__.py  __main__.py  common.py  llm.py
runners/crewai/runner/tasks/: __init__.py  task01.py  task04_expert.py  task04_naive.py  task05.py  task06_refund.py  task07_tools.py  task07b_tools.py  task08_codeexec.py  task09_skills.py  task10_secrets.py
runners/crewai/tests/: test_emit_output.py
runners/google_adk/: pyproject.toml
runners/google_adk/runner/: __init__.py  __main__.py  llm.py
runners/google_adk/runner/tasks/: task01.py  task04_expert.py  task04_naive.py  task05.py  task06_refund.py  task07_tools.py  task07b_tools.py  task08_codeexec.py  task09_skills.py  task10_secrets.py
runners/langchain/: pyproject.toml
runners/langchain/runner/: __init__.py  __main__.py  llm.py
runners/langchain/runner/tasks/: task01.py  task04_expert.py  task04_naive.py  task05.py  task06_refund.py  task07_tools.py  task07b_tools.py  task08_codeexec.py  task09_skills.py  task10_secrets.py
runners/langgraph/: pyproject.toml
runners/langgraph/runner/: __init__.py  __main__.py  llm.py
runners/langgraph/runner/server/: app.py
runners/langgraph/runner/tasks/: task01.py  task04_expert.py  task04_naive.py  task05.py  task06_refund.py  task07_tools.py  task07b_tools.py  task08_codeexec.py  task09_skills.py  task10_secrets.py
runners/llamaindex/: pyproject.toml
runners/llamaindex/runner/: __init__.py  __main__.py  llm.py
runners/llamaindex/runner/tasks/: task01.py  task04_expert.py  task04_naive.py  task05.py  task06_refund.py  task07_tools.py  task07b_tools.py  task08_codeexec.py  task09_skills.py  task10_secrets.py
runners/openai_agents/: pyproject.toml
runners/openai_agents/runner/: __init__.py  __main__.py  llm.py
runners/openai_agents/runner/tasks/: __init__.py  task05.py  task06_refund.py  task07_tools.py  task08_codeexec.py  task10_secrets.py
runners/pydantic_ai/: pyproject.toml
runners/pydantic_ai/runner/: __init__.py  __main__.py  llm.py
runners/pydantic_ai/runner/tasks/: __init__.py  task05.py  task06_refund.py  task07_tools.py  task08_codeexec.py  task10_secrets.py
scripts/: _dag_smoke.py  _verify_grader.py  build_whitepaper_pdf.py  export_ts_fixtures.py  run_demo05.sh  run_demo05_n.sh  run_demo06.sh  run_demo07.sh  run_demo08.sh  run_demo09.sh  run_demo10.sh  run_demo13.sh  run_task.sh  run_task4_all.sh  setup_all.sh  smoke_colmena.sh  smoke_demo05_colmena.sh  verify_baseline.sh
spikes/: README.md
(+1340 files in other folders)
