[project]
name = "colmena-bench-harness"
version = "0.1.0"
description = "Orchestrator + schemas + tests for colmena-bench"
requires-python = ">=3.11,<3.13"

# Snapshot: 2026-06-10. See /METHODOLOGY.md §1.
dependencies = [
    "jsonschema>=4.21",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "typer>=0.12",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "psutil>=5.9",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator", "schemas", "tasks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
