[project]
name = "bench-common"
version = "0.1.0"
description = "Framework-agnostic runner core shared by all colmena-bench Python runners"
requires-python = ">=3.11,<3.13"

dependencies = [
    "pyyaml>=6.0",
    "psutil>=5.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bench_common"]

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pytest>=9.1.0",
]
