[project]
name = "colmena-bench-runner-llamaindex"
version = "0.1.0"
description = "LlamaIndex runner for colmena-bench"
requires-python = ">=3.11,<3.13"

# Snapshot: 2026-06-10. See /METHODOLOGY.md §1.
dependencies = [
    "llama-index==0.14.22",
    "llama-index-core==0.14.22",
    "llama-index-llms-gemini",
    "llama-index-llms-anthropic",
    "llama-index-llms-openai",
    "litellm==1.88.1",
    "pydantic>=2.7",
    "pyyaml",
    "typer",
    "psutil",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runner"]
