[project]
name = "colmena-bench-runner-openai-agents"
version = "0.1.0"
description = "OpenAI Agents SDK runner for colmena-bench"
requires-python = ">=3.11,<3.13"

# Snapshot: 2026-07-05. Pinned exactly (openai-agents is pre-1.0, expect churn).
dependencies = [
    "openai-agents==0.17.7",
    "openai>=1.50",
    "pydantic>=2.7",
    "pyyaml",
    "psutil",
    "pandas",   # task08 code-exec runs pandas over the CSV (unsandboxed)
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runner"]
