[project]
name = "colmena-bench-runner-pydantic-ai"
version = "0.1.0"
description = "Pydantic AI runner for colmena-bench"
requires-python = ">=3.11,<3.13"

# Snapshot: 2026-07-05. Pinned exactly (pydantic-ai is pre-1.0, expect churn).
dependencies = [
    "pydantic-ai==2.5.0",
    "openai>=1.50",
    "pydantic>=2.7",
    "pyyaml",
    "psutil",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runner"]
